[project]
name = "ctfd-enum"
version = "1.0.0"
description = "Enumerate and bruteforce CTFd registrations and logins"
authors = [{ name = "bjornmorten", email = "bjornmdev@proton.me" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["typer", "rich", "tqdm", "beautifulsoup4", "requests"]

[project.urls]
Homepage = "https://github.com/bjornmorten/ctfd-enum"
Repository = "https://github.com/bjornmorten/ctfd-enum"
Issues = "https://github.com/bjornmorten/ctfd-enum/issues"

[project.scripts]
ctfd-enum = "ctfd_enum:app"
